--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,4 +3,7 @@
 #CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
+#CONFIG_ZMK_DISPLAY=y
+
+# https://zmk.dev/docs/features/bluetooth#connectivity-issues# https://zmk.dev/docs/features/bluetooth#connectivity-issues# https://zmk.dev/docs/features/bluetooth#connectivity-issues
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
